# Vision-SLAM-Algorithms

./: .gitignore  README.md
3D_Rigid_Body_Motion/: README.md
3D_Rigid_Body_Motion/Eigen_basics/: CMakeLists.txt  build.sh  main.cc
3D_Rigid_Body_Motion/Eigen_geometric_module/: CMakeLists.txt  build.sh  main.cc
3D_Rigid_Body_Motion/plot_trajectory/: CMakeLists.txt  main.cc  plot_trajectory
3D_Rigid_Body_Motion/principle/: Rotation_Matrix.md
Camera_and_Image/: README.md
Camera_and_Image/image_basics_opencv/: CMakeLists.txt  main.cc
Camera_and_Image/join_pointcloud/: CMakeLists.txt  README.md  main.cc
Camera_and_Image/undistort_image/: CMakeLists.txt  main.cc
Lie_Group&Lie_Algebra/: README.md
Lie_Group&Lie_Algebra/Sophus_basics/: CMakeLists.txt  main.cc
Lie_Group&Lie_Algebra/trajectory_error/: CMakeLists.txt  README.md  main.cc
environment_setup/: CeresUsage.md  SetupCeres.md  SetupEigen3.md  SetupG2o.md  SetupOpenCV.md  SetupPCL.md  SetupSophus.md
nonlinear_optimization/: README.md
nonlinear_optimization/ceres_curve_fitting/: CMakeLists.txt  README.md  main.cc
nonlinear_optimization/g2o_curve_fitting/: CMakeLists.txt  README.md  main.cc
nonlinear_optimization/gauss_newton/: CMakeLists.txt  main.cc
slam_backend/g2o_ba/: common.hpp  main.cc
visual_odometry/: README.md
visual_odometry/epnp_opencv/: CMakeLists.txt  main.cc
visual_odometry/icp_g2o/: CMakeLists.txt  main.cc
visual_odometry/icp_svd/: CMakeLists.txt  README.md  main.cc
visual_odometry/matrix_caution_cv_eigen/: CMakeLists.txt  main.cc
visual_odometry/orb_cv/: CMakeLists.txt  README.md  main.cc
visual_odometry/orb_self/: CMakeLists.txt  README.md  main.cc
visual_odometry/pnp_ba_gaussnewton/: CMakeLists.txt  main.cc
visual_odometry/pnp_g2o/: CMakeLists.txt  main.cc
visual_odometry/pnp_manual_gaussnewton/: CMakeLists.txt  main.cc
visual_odometry/principle/: ORB_feature.md
